--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,21 @@
     <artifactId>jbcrypt</artifactId>
     <version>0.4</version>
   </dependency>
+  
 
+   <!-- Log4j2 Core -->
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.20.0</version>
+    </dependency>
+
+    <!-- Log4j2 API -->
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>2.20.0</version>
+    </dependency>
  
 
 
