--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,10 @@
     </dependency>
     <!-- Mysql -->
      <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.33</version>
-        </dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.33</version>
+      </dependency>
 
     <!-- Servlet API (provided by the container, e.g., Tomcat) -->
     <dependency>
@@ -62,6 +62,14 @@
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-api</artifactId>
         <version>2.20.0</version>
+    </dependency>
+
+
+    <!-- Dotenv for loading .env file -->
+    <dependency>
+        <groupId>io.github.cdimascio</groupId>
+        <artifactId>java-dotenv</artifactId>
+        <version>5.2.2</version>
     </dependency>
  
 
